# vp-baum

./: CMakeLists.txt  KArray.cc  KArray.hh  Makefile  Mass.cc  Mass.hh  Merkmal.cc  Merkmal.hh  MerkmalsMenge.cc  MerkmalsMenge.hh  NNsearch.cc  Seite.cc  Seite.hh  VPBaum.cc  VPBaum.hh  VPgenerate.cc  VPinfo.cc  VPksearch.cc  VPsearch.cc  positionstest.c  serie.c  testset.cc
